footer links wrong color fixed

--- a/client/wfnews-war/src/main/angular/src/styles/_base.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_base.scss
@@ -610,3 +610,12 @@ iframe#login-iframe {
 .smk-toolbar {
     box-shadow: none !important;
 }
+
+wf-footer a.nav-item {
+    text-decoration: none;
+}
+
+wf-footer a.nav-item:hover {
+    text-decoration: underline;
+    color:white;
+}
